Update build.sbt.